# tennis-predictor

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  dvc.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
.dvc/: config
data/: .gitignore  test_dvc.txt.dvc
data/bronze/tennis_atp/: .gitignore  README.md  atp_matches_2015.csv.dvc  atp_matches_2016.csv.dvc  atp_matches_2017.csv.dvc  atp_matches_2018.csv.dvc  atp_matches_2019.csv.dvc  atp_matches_2020.csv.dvc  atp_matches_2021.csv.dvc  atp_matches_2022.csv.dvc  atp_matches_2023.csv.dvc
data/bronze/tennis_odds/: .gitignore  2015.xlsx.dvc  2016.xlsx.dvc  2017.xlsx.dvc  2018.xlsx.dvc  2019.xlsx.dvc  2020.xlsx.dvc  2021.xlsx.dvc  2022.xlsx.dvc  2023.xlsx.dvc  README.md
data/gold/: dev_evaluation.json  test_evaluation.json  train_evaluation.json
data/processed/: dev_scores.json  test_scores.json  train_scores.json
data/raw/: tournament_country.csv
docs/: DVC.md  References.md
models/: encoder.pkl  medians.pkl  xgb_model.json
notebooks/: 1.0-pg-data-exploration.ipynb  1.1-pg-data-exploration2.ipynb  2.0-pg-model.ipynb  README.md
pipelines/: 1_make_tennis_atp_database.py  2_compute_elo.py  5_join_rank.py  6_train_test_split.py  7_predict.py  8_evaluate.py
references/: ExperimentLog.md  datasets.md
src/data/: preprocess.py
src/tennis_predictor/: __init__.py  advise.py  advisor.py
src/tennis_predictor/config/: columns.py  data.py  parameters.py
src/tennis_predictor/data/: preprocess.py
tests/units/: elo_test.py  odds_test.py
(+25 files in other folders)
