[project]
name = "tennis_predictor"
version = "0.1.0"
description = "A package to predict tennis match outcomes"
authors = [
    { name="Pierre Gourseaud", email="pierre.gourseaud@gmail.com" }
]
license = { text = "MIT" }
dependencies = [
    "numpy>=2.2.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.1",
    "tqdm>=4.67.1",
    "xlrd>=2.0.1",
]

[project.optional-dependencies]
dev = [
    "matplotlib>=3.10.0",
    "pytest>=8.3.4"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"